# ai-tasks

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_api_access.py  test_paapi.py
.github/workflows/: run.yaml
paapi5-python-sdk-example/paapi5-python-sdk-example/: python-config.json  sample_get_items_api.py  sample_get_variations_api.py  sample_search_items_api.py  setup.py
paapi5-python-sdk-example/paapi5-python-sdk-example/paapi5_python_sdk/: api_client.py  configuration.py
paapi5-python-sdk-example/paapi5-python-sdk-example/test/: test_default_api.py
src/: __init__.py  keywords.py  main.py
src/data/: amazon.py
src/utils/: browser.py  fsutil.py  llm.py  paapi.py
